docker-k8s-workshop/day3/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-day1-cluster-ip-service
spec:
  selector:
    app: day1-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
