docker-k8s-workshop/day3/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-day1-load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: day1-app
  ports:
    - port: 8080
      targetPort: 8080
