docker-k8s-workshop/day3/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-day1-node-port-service
spec:
  type: NodePort
  selector:
    app: day1-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
